# reactive-microservices-with-kafka-python

./: LICENSE  README.md  consumer.py  docker-compose.yml  producer.py  pyproject.toml
profiles/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  makefile  pyproject.toml  pytest.ini
profiles/migrations/: env.py
profiles/migrations/versions/: 39861315c5ba_.py  7396ea1d0585_.py  748d6626f37b_.py
profiles/source/adapters/: controllers.py  events.py  repositories.py  subscribers.py
profiles/source/application/: create_profile.py  create_profiles_batch.py  dtos.py  retrieve_profile.py  update_profile.py
profiles/source/domain/: entities.py  enums.py
profiles/source/infrastructure/: fastapi.py  kafka.py  loggers.py  settings.py  sqlalchemy.py  sqlmodel.py  tables.py
profiles/source/infrastructure/kafka/: consumers.py  producers.py  subscriber.py
profiles/source/ports/: events.py  repositories.py
scripts/: pyproject.toml  stress_test.py
users/: .env.example  Dockerfile  README.md  makefile  pyproject.toml
users/migrations/: env.py
users/migrations/versions/: 3deec2f8db86_.py  667440d87275_.py  bed5cff54d5e_.py
users/source/adapters/: controllers.py  events.py  repositories.py
users/source/application/: register_user.py
users/source/domain/: entities.py
users/source/infrastructure/: databases.py  fastapi.py  kafka.py  settings.py  tables.py
users/source/ports/: events.py  repositories.py
users/source/tests/: test_application.py
