[tool.poetry]
name = "reactive-service"
version = "0.1.0"
description = ""
authors = ["elpapi42 <whitman-2@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiokafka = "^0.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
