[tool.poetry]
name = "profiles"
version = "0.1.0"
description = ""
authors = ["elpapi42 <whitman-2@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["watchdog"], version = "^0.68.1"}
uvicorn = "^0.15.0"
aiokafka = "^0.7.1"
pytest = "^6.2.4"
pytest-asyncio = "^0.15.1"
asyncpg = "^0.24.0"
psycopg2 = "^2.9.1"
alembic = "^1.6.5"
pydantic = {extras = ["dotenv"], version = "^1.8.2"}
sqlmodel = "^0.0.4"
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.23"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
