[tool.poetry]
name = "users"
version = "0.1.0"
description = ""
authors = ["elpapi42 <whitman-2@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["watchdog"], version = "^0.68.0"}
uvicorn = "^0.14.0"
pytest = "^6.2.4"
pytest-asyncio = "^0.15.1"
alembic = "^1.6.5"
python-dotenv = "^0.19.0"
psycopg2 = "^2.9.1"
databases = {extras = ["postgresql"], version = "^0.4.3"}
email-validator = "^1.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
